# Olio-ohjelmointi

H2/: CMakeLists.txt  H2_h.h  Vaihe_1.cpp  Vaihe_2.cpp  Vaihe_3.cpp  main.cpp
H3/: CMakeLists.txt  H3a.cpp  H3a.h  H3b.cpp  H3b.h  h3a.cpp  h3a.h  main.cpp
H4/: CMakeLists.txt  car.cpp  car.h  main.cpp
H5/: aggregationa.cpp  assosiationa.cpp  assosiationa.h  classb.cpp  classb.h  main.cpp
H6a/: CMakeLists.txt  main.cpp  myclass.cpp
H6b/: H6b.pro  ecampleclass.cpp  ecampleclass.h  main.cpp
build-H2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-H2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-abae984788b19d586632.json  cmakeFiles-v1-328575087129a5e515db.json  codemodel-v2-17def2396188b619e6a5.json  (+3 more)
build-H2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-H2-Desktop_Qt_6_6_1_MinGW_64_bit-Profile/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-H2-Desktop_Qt_6_6_1_MinGW_64_bit-Profile/.qtc_clangd/: compile_commands.json
build-H2a-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-H2a-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-H3-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-H3-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
h1/: CMakeLists.txt  main.cpp
(+45 files in other folders)
